--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,24 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>HackMidwest</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+	<!DOCTYPE html>
+	<html>
+	<head>
+	  <title>HackMidwest</title>
+	  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+	  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+	  <%= csrf_meta_tags %>
+	</head>
+	<body>
+	<p class="notice"><%= notice %></p>
+	<p class="alert"><%= alert %></p>
+	<div style="background: rgba(130, 191, 114, 0.9)">
+	<%= link_to events_path, events_path %> | <%= link_to groups_path, groups_path %> | <%= link_to new_user_session_path, new_user_session_path %>
+	</div>
+	<div style="background: rgb(114, 191, 155)">
+	<%= link_to destroy_user_session_path, destroy_user_session_path, :method => :delete %>
+	</div>
 
-<%= yield %>
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
-</body>
-</html>
+
+
+	<%= yield %>
+	</body>
+	</html>
+
