--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -37,7 +37,7 @@
   </div>
   <div class="field">
     <%= f.label :group_id %><br>
-    <%= f.check_box :group_id %>
+    <%= f.text_field :group_id %>
   </div>
   <div class="actions">
     <%= f.submit %>
