added view stuff for new locations fields in event

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -32,6 +32,18 @@
     <%= f.text_field :location %>
   </div>
   <div class="field">
+    <%= f.label :address %><br>
+    <%= f.text_field :address %>
+  </div>
+  <div class="field">
+    <%= f.label :latitude %><br>
+    <%= f.text_field :latitude %>
+  </div>
+  <div class="field">
+    <%= f.label :longitude %><br>
+    <%= f.text_field :longitude %>
+  </div>
+  <div class="field">
     <%= f.label :is_public %><br>
     <%= f.check_box :is_public %>
   </div>
