--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -8,6 +8,9 @@
       <th>Start</th>
       <th>End</th>
       <th>Location</th>
+      <th>adress</th>
+      <th>latitude</th>
+      <th>longitude</th>
       <th>Is public</th>
       <th colspan="3"></th>
     </tr>
@@ -21,6 +24,9 @@
         <td><%= event.start %></td>
         <td><%= event.end %></td>
         <td><%= event.location %></td>
+        <td><%= event.address %></td>
+        <td><%= event.latitude %></td>
+        <td><%= event.longitude %></td>
         <td><%= event.is_public %></td>
         <td><%= link_to 'Show', event %></td>
         <td><%= link_to 'Edit', edit_event_path(event) %></td>
