--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,8 @@
 	</head>
 	<body>
 	<div class="container">
+	<div class="row">
+	<div class="col-xsm-12">
 		<p class="notice"><%= notice %></p>
 		<p class="alert"><%= alert %></p>
 
@@ -18,7 +20,7 @@
 		<div style="background: rgba(114, 180, 191, .9)">
 			<%= link_to 'Home', root_path %>
 			<% if user_signed_in? %>
-			<%= current_user %> |
+			<%= current_user %>
 			<%= link_to destroy_user_session_path, destroy_user_session_path, :method => :delete %>
 		</div>
 
@@ -28,13 +30,14 @@
 		</div>
 
 		<div style="background: rgba(130, 191, 114, 0.9)">
-			<%= link_to events_path, events_path %> | <%= link_to groups_path, groups_path %> | <%= link_to new_user_session_path, new_user_session_path %>
+			<%= link_to events_path, events_path %> <%= link_to groups_path, groups_path %> <%= link_to new_user_session_path, new_user_session_path %>
 		</div>
 
 	<%= yield %>
 
 
-
+	</div>
+	</div>
 	</div>
 	</body>
 	</html>
