--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
 
+<h1>Event <%= @event.id %>: <%= @event.name %></h1>
 <p>
   <strong>Name:</strong>
   <%= @event.name %>
@@ -30,5 +31,39 @@
   <%= @event.is_public %>
 </p>
 
+<p>
+  <strong>Group ID:</strong>
+  <%= @event.group_id %>
+</p>
+
+
 <%= link_to 'Edit', edit_event_path(@event) %> |
 <%= link_to 'Back', events_path %>
+
+
+<hr>
+
+<h1>Event Alerts</h1>
+<table>
+  <thead>
+    <tr>
+      <th>Event</th>
+      <th>Send datetime</th>
+      <th>Is sent</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+  <% @unsent_alerts.each do |alert| %>
+      <tr>
+        <td><%= alert.event_id %></td>
+        <td><%= alert.send_datetime %></td>
+        <td><%= alert.is_sent %></td>
+        <td><%= link_to 'Show', alert %></td>
+        <td><%= link_to 'Edit', edit_alert_path(alert) %></td>
+        <td><%= link_to 'Destroy', alert, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
