--- a/app/views/confirmations/new.html.erb
+++ b/app/views/confirmations/new.html.erb
@@ -1,10 +1,22 @@
 <h1>New confirmation</h1>
 
+<% if params[:event_id].present?
+		#puts "************************** EVENT ID "<< params[:event_id].to_s
+		e = Event.find(params[:event_id])
+		cookies['event_lat_long'] = {
+		  :value => e.latitude.to_s << "|" << e.longitude.to_s
+		}
+	end %>
+
+<% if flash[:message] %>
+    <div style="color:red" class="notice"><%= flash[:message] %></div>
+<% end %>
+
 <%= render 'form' %>
 
 <%= link_to 'Back', confirmations_path %>
 
-<%- unless @lat_lng %>
+<%- unless @user_lat_lng %>
 <script>
   TestGeo();
 
@@ -25,9 +37,9 @@
 		var longitude = position.coords.longitude;  
 		//alert("Your coordinates are " + position.coords.latitude + ", " + position.coords.longitude);
 		// log to cookie
-		document.cookie="lat_long=" + position.coords.latitude + "|" + position.coords.longitude;
+		document.cookie="user_lat_long=" + position.coords.latitude + "|" + position.coords.longitude;
 		}
-		
+		console.log(document.cookie);
 		
 	function error() {
 			alert("Cannot locate user");
