--- a/app/views/confirmations/_form.html.erb
+++ b/app/views/confirmations/_form.html.erb
@@ -11,17 +11,7 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.text_field :user_id %>
-  </div>
-
-  <div class="field">
-    <%= f.label :event_id %><br>
-    <%= f.text_field :event_id %>
-  </div>
-
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Check in" %>
   </div>
 <% end %>
