--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -5,7 +5,7 @@
  */
 
 /*! normalize.css v3.0.1 | MIT License | git.io/normalize */
-/*html {
+html {
   font-family: sans-serif;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
@@ -6199,5 +6199,5 @@ button.close {
   .hidden-print {
     display: none !important;
   }
-}*/
-/*# sourceMappingURL=bootstrap.css.map */
+}
+# sourceMappingURL=bootstrap.css.map 
