--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -6200,4 +6200,4 @@ button.close {
     display: none !important;
   }
 }
-# sourceMappingURL=bootstrap.css.map 
+sourceMappingURL=bootstrap.css.map 
