--- a/app/views/alerts/_form.html.erb
+++ b/app/views/alerts/_form.html.erb
@@ -26,8 +26,13 @@
   </div>
   <div class="field">
     <%= f.label :body %><br>
-    <%= f.check_box :body %>
+    <%= f.text_field :body %>
   </div>
+  <div class="field">
+    <%= f.label :event_id %><br>
+    <%= f.number_field :event_id %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
