--- a/app/views/alerts/show.html.erb
+++ b/app/views/alerts/show.html.erb
@@ -8,7 +8,8 @@
 
 <p>
   <strong>Send datetime:</strong>
-  <%= @alert.send_datetime %>
+  <%= @alert.send_datetime.strftime("%B %d, %Y at %I:%M %p"); %>
+
 </p>
 
 <p>
@@ -21,14 +22,5 @@
   <%= @alert.body %>
 </p>
 
-<%= link_to 'Edit', edit_alert_path(@alert) %> |
+<%= link_to 'Edit', edit_alert_path(@alert) %>
 <%= link_to 'Back', alerts_path %>
-
-<hr>
-
-
-<script>
-	$(document).ready (function(){
-		alert('ehhlo');
-	});
-</script>
