--- a/app/views/confirmations/new.html.erb
+++ b/app/views/confirmations/new.html.erb
@@ -1,3 +1,8 @@
+<fb:login-button scope="public_profile,email,user_friends" onlogin="checkLoginState();">
+</fb:login-button>
+
+<div id="status"></div>
+
 <style type="text/css">
       #map-canvas { height: 100% }
     </style>
@@ -36,6 +41,7 @@
   //console.log(user_id);
   user_id = user_id.substring(8);
   var event_id = URL.substring(URL.indexOf("event_id="));
+  var user_location_marker;
   //console.log(event_id);
   event_id = event_id.substring(9);
   //console.log(user_id);
@@ -109,7 +115,7 @@
     var eventLatLng = new google.maps.LatLng(a_event.lat, a_event.long);
 
     //create a new marker
-    var user_location_marker = new google.maps.Marker({
+    user_location_marker = new google.maps.Marker({
       position: userLatLng,
       animation: google.maps.Animation.DROP,
       clickable:true,
@@ -157,7 +163,7 @@
   }
 
   function adjustMapToFitAllPoints(LatLngList){
- 	
+
 	//  Create a new viewpoint bound
 	var bounds = new google.maps.LatLngBounds ();
 	//  Go through each...
@@ -190,8 +196,80 @@
     var eventCircle = new google.maps.Circle(eventRadiusOptions);
   }
 	function error() {
-			alert("Cannot locate user");
-			}
+	alert("Cannot locate user");
+	}
+
+	  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '520943248035157',
+      cookie     : true,  // enable cookies to allow the server to access 
+                          // the session
+      xfbml      : true,  // parse social plugins on this page
+      version    : 'v2.0' // use version 2.0
+    });
+
+    FB.getLoginStatus(function(response) {
+      statusChangeCallback(response);
+    });
+
+  };
+
+	// This is called with the results from from FB.getLoginStatus().
+  function statusChangeCallback(response) {
+    console.log('statusChangeCallback');
+    console.log(response);
+    // The response object is returned with a status field that lets the
+    // app know the current login status of the person.
+    // Full docs on the response object can be found in the documentation
+    // for FB.getLoginStatus().
+    if (response.status === 'connected') {
+      // Logged into your app and Facebook.
+      testAPI();
+    } else if (response.status === 'not_authorized') {
+      // The person is logged into Facebook, but not your app.
+      document.getElementById('status').innerHTML = 'Please log ' +
+        'into this app.';
+    } else {
+      // The person is not logged into Facebook, so we're not sure if
+      // they are logged into this app or not.
+      document.getElementById('status').innerHTML = 'Please log ' +
+        'into Facebook.';
+    }
+  }
+
+  // This function is called when someone finishes with the Login
+  // Button.  See the onlogin handler attached to it in the sample
+  // code below.
+  function checkLoginState() {
+    FB.getLoginStatus(function(response) {
+      statusChangeCallback(response);
+    });
+  }
+
+  // Load the SDK asynchronously
+  (function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "//connect.facebook.net/en_US/sdk.js";
+    fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));
+
+  function testAPI() {
+    /* make the API call */
+    FB.api(
+      "/me/picture",
+      function (response) {
+        if (response && !response.error) {
+          console.log(response);
+          user_location_marker.setIcon(response.data.url);
+        }else{
+          console.log("Cannot get the image of the user");
+          console.log(response);
+        }
+      }
+    );
+  }
 
 </script>
 <%- end %>
