--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
 
 <script>
 $(document).ready(function(){
-	$('*').each(function()
+	$('div').each(function()
 	{
 		$(this).css({'background': Please.make_color()})
 
