changed to heroku location instead of localhost

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -210,7 +210,7 @@
   // A $( document ).ready() block.
   $( document ).ready(function() {
       $.ajax({
-        url: "http://localhost:3000/events",
+        url: "http://hack-midwest-app.herokuapp.com/events",
         dataType: "json",
         type: "GET",
         processData: false,
