--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,41 +7,69 @@
 		<%= csrf_meta_tags %>
 	</head>
 	<body>
-			<p class="notice"><%= notice %></p>
-			<p class="alert"><%= alert %></p>
 
-			<div style="background: rgb(189, 191, 114);">
-				<%= root_url %>
-			</div>
-			<div style="background: rgb(190, 114, 191);">
-				<%= Time.now %>
-			</div>
 
-			<div style="background: rgba(114, 180, 191, .9)">
-				<%= link_to 'Home', root_path %>
-				<% if user_signed_in? %>
-					Phone number:: <%= current_user.phone_num %>:
-					<%= link_to current_user.id, edit_user_registration_path %>
 
-				<% else %>
-					<%= link_to 'Login', new_user_session_path %>
-				<% end %>
-			</div>
 
-		</div>
 
-		<div style="background: rgba(130, 191, 114, 0.9)">
-			<%= link_to events_path, events_path %> <%= link_to groups_path, groups_path %> <%= link_to new_user_session_path, new_user_session_path %>
-		</div>
+	<nav class="navbar navbar-default" role="navigation">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <%= link_to 'Unify', root_path, class: "navbar-brand" %>
+	 </div>
 
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#"><%= Time.now %></a></li>
+        <li><a href="#"></a></li>
+        <li class="dropdown">
+          <li><%= link_to events_path, events_path %></li>
+          <li><%= link_to groups_path, groups_path %></li>
+
+      </ul>
+      
+      <ul class="nav navbar-nav navbar-right">
+        <li><% if user_signed_in? %><%= link_to 'Cell: '+current_user.phone_num, edit_user_registration_path %><% end %></li>
+        <li class="dropdown">
+        
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="#">Settings</a></li>
+
+            <li class="divider"></li>
+            <li><%= link_to 'Login', new_user_session_path %>
+        </li>
+            <li><a href="#">Logout</a></li>
+            
+          </ul>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
+
+
+
+
+
+
+	<div class="container">
 		<%= yield %>
-
-	<hr>
-
-
-<script>
-
-</script>
+				<p class="notice"><%= notice %></p>
+				<p class="alert"><%= alert %></p>
+		<hr>
+	</div>
+	<script>
+	</script>
 
 </body>
 </html>
