--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,53 +8,47 @@
 	</head>
 	<body>
 
+		<nav class="navbar navbar-default" role="navigation">
+			<div class="container-fluid">
+				<!-- Brand and toggle get grouped for better mobile display -->
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<%= link_to 'U:nifi', root_path, class: "navbar-brand" %>
+				</div>
 
+				<!-- Collect the nav links, forms, and other content for toggling -->
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					<ul class="nav navbar-nav">
+						<li class="active"><a href="#"><%= Time.now %></a></li>
+						<li><a href="#"></a></li>
+						<li class="dropdown">
+							<li><%= link_to groups_path, groups_path %></li>
 
+							<li><%= link_to events_path, events_path %></li>
 
+						</ul>
 
-	<nav class="navbar navbar-default" role="navigation">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <%= link_to 'Unify', root_path, class: "navbar-brand" %>
-	 </div>
+						<ul class="nav navbar-nav navbar-right">
+							<% if user_signed_in? %>
+								<li><%= link_to 'Cell: '+current_user.phone_num, edit_user_registration_path %></li>
+								<li><%= link_to 'Settings', edit_user_registration_path %></li>
+								<li><%= link_to 'Logout', destroy_user_session_path, :method => :delete %></li>
+							
+							<% else %>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#"><%= Time.now %></a></li>
-        <li><a href="#"></a></li>
-        <li class="dropdown">
-          <li><%= link_to events_path, events_path %></li>
-          <li><%= link_to groups_path, groups_path %></li>
-
-      </ul>
-      
-      <ul class="nav navbar-nav navbar-right">
-        <li><% if user_signed_in? %><%= link_to 'Cell: '+current_user.phone_num, edit_user_registration_path %><% end %></li>
-        <li class="dropdown">
-        
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Settings</a></li>
-
-            <li class="divider"></li>
-            <li><%= link_to 'Login', new_user_session_path %>
-        </li>
-            <li><a href="#">Logout</a></li>
-            
-          </ul>
-        </li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
+							<li><%= link_to 'Login', new_user_session_path %></li>
+							<% end %>
+						</ul>
+					</li>
+				</ul>
+			</div><!-- /.navbar-collapse -->
+		</div><!-- /.container-fluid -->
+	</nav>
 
 
 
@@ -64,8 +58,8 @@
 
 	<div class="container">
 		<%= yield %>
-				<p class="notice"><%= notice %></p>
-				<p class="alert"><%= alert %></p>
+		<p class="notice"><%= notice %></p>
+		<!-- <p class="alert"><%= alert %></p> -->
 		<hr>
 	</div>
 	<script>
