--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -219,7 +219,7 @@ function buttonSelected(){
   // A $( document ).ready() block.
   $( document ).ready(function() {
   	$.ajax({
-  		url: "http://localhost:3000/events",
+  		url: "http://http://hack-midwest-app.herokuapp.com/events",
   		dataType: "json",
   		type: "GET",
   		processData: false,
