--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -19,7 +19,7 @@
 
 		<div style="left:0;
 right:0;" id="full-header">
-		<h1><img src="https://s3.amazonaws.com/HackMidwest/U-nifi-logo-black.png" height="100%" width="15%"><center>GPS Meeting Organizer</center></h1>
+		<h1><img src="https://s3.amazonaws.com/HackMidwest/U-nifi-logo-black.png" height="100%" width="15%">GPS Meeting Organizer</h1>
 		</div>
 		<hr>
 
